Draft E Finalized version

--- a/mainSections/finalDesign.tex
+++ b/mainSections/finalDesign.tex
@@ -7,6 +7,7 @@
 \section{Problem Solving Approach}\label{finalDesign}
 Prior research into the topic of alternatively powered aircraft has shown great viability in the area of electric aircraft, especially within the areas of short-haul cargo logistics. Right-on-time supply chain architecture, especially in areas of e-Commerce has created a demand for quick, efficient package distribution networks. As a result, major logistic carriers see electric aircraft as a viable option to satisfy both the consumer and their sustainability goals.It is also evidently clear that both package carriers and airports do not retain internal resources capable of designing such an infrastructure system for electric aircraft that maintains consistency and viability during the lifetime of the system.\par
 With the results from the reviewed literature in consideraiton, a few solution paths were considered. These solutions were entered into a Decision Matrix seen in Figure \ref{fig:decisionMatrix}, which helped to guide our final solution. The following page shows the resultant selection matrix indicating the best (green) and worst (red) solutions. Scores for each category were aggregated via simple mean value between independent team member assessment.\par
+\newpage
 For easy reference in the solution matrix, below can be found a short description of each solution:
 \begin{singlespace}
 \begin{description}
@@ -27,7 +28,7 @@ For easy reference in the solution matrix, below can be found a short descriptio
   \end{adjustbox}
 \end{figure}
 \FloatBarrier
-\section{System Design}
+\section{System Design}\label{sysDesign}
 The result of this decision matrix demonstrates that the implementation of electric aircraft is a multi-faceted problem that requires many different aspects. It is also clear that considering a single element of electric aircraft does not essentially result in reliable, sustainable implementation of this new type of aircraft.\par
 Our solution acts as the consultant for both airports and/or logistics companies as a system integrator for this problem. In order for such a solution involving electric aircraft to be environmentally sound, it is crucial to consider the complete infrastructure system necessary to support the new form of air transport.\par
 These system elements can be broadly comprised into the following categories:
@@ -42,19 +43,19 @@ These system elements can be broadly comprised into the following categories:
     \item Energy Transfer to Aircraft
 \end{enumerate}
 \end{singlespace}
-
+\newpage
 \subsection{Marketing of Electric Aircraft Integration} % MICHAEL'S SECTION
 The adoption of Electric planes in the flight industry is not a question of if or how, but when. At this point in time, the addition of electric airplanes to our skies is merely a natural progression we are now witnessing and will continue to witness. This new market brings a better today along with a cleaner tomorrow by combining cheaper flights with greener transportation. In combination with a sustainable power generation source such as anti-glare solar panels, moderately frequent flights will cost virtually nothing in electricity as compared to fossil fuels. Creating green power generation will pay for itself over and over as airports continue to use this energy for their flights creating cost efficient flight affiliated fares for both the passengers and airports.\par
 When discussing just the cargo and shipping capabilities, electric planes will dominate the industry. The world is constantly attracted to "faster, better, smarter" technology, and the biggest demand in the shipping world is speed. Overnight shipping, two-to-three-day shipping, you name it, every large bountiful product transport company has it. Electric planes, especially VTOL models, are ideal for not only assuring these fast and demanded services but creating a cleaner wave of transportation in the process. The most accepted form of electric aircraft are currently smaller airplanes ideal for frequent fast flights such as overnight shipment delivery, and this market segment holds massive growth capability.\par
 A large benefit of green airfare is that in the event of a fuel shortage or large spike in jet fuel, electric planes will be barely affected. Because most of the "refueling" or charging process, if not all, is done naturally, electric airplanes will flourish in the event of a liquid fuel shortage or in times of hyperinflation. Airlines can offer exclusive deals, rates, and opportunities unheard of to customers through the electric plane avenue, changing the dynamic of flight fares and cargo rates.  The earlier an airport accepts and inducts these types of aircraft, the more profitable the airport will be in the near future.\par 
-
+\newpage
 \subsection{Sustainable Power Generation} % ALEX'S SECTION
 The concept of sustainable power generation is an inherently complex topic that in of itself can constitute a solution. However, our research has shown there is great value in providing a solution capable of performing the analysis necessary to implement a sustainable power generation system at a given site. A variety of factors contribute to the overall design, including but not limited to: climate, geography, flight throughput, maintenance costs, and the life cycle of the system. It is crucial to have a rudimentary understanding of these concepts in order to properly design the system.\par
 Climate analysis is the first aspect of a power generation system. Sustainable solutions require climate that is conducive to the generational technique utilized. For example, solar generation requires climate with consistent solar radiation. Similarly, low-level solar turbines require consistent wind and weather patterns. In coastal areas, tidal generation systems may be used. However, an oceanographic survey is necessary to ensure favorable tidal patterns.\par
 Once a basis for the site climate characteristics is established, it is next necessary to examine the geography available at the site. Fortunately, many airports feature large and somewhat flat land. This is primarily for safety and also gives incoming pilots an easy approach path. Sites that have a more complex terrestrial makeup constitute a more unique solution, presenting a unique set of challenges regardless of the power generation method utilized.\par
 Most crucially, the system design must contain enough generation capacity. Without sufficient capacity, a sustainable solution is helpful, albeit ineffective at providing green energy to the aircraft. At existing sites, it is simple enough to perform an assessment of the cargo throughput, planes utilized, and operational schedule. These metrics can then be applied to the target electric fleet planned at the site, which results in the amount of power necessary to support that given capacity. It is advantageous to carefully consider the growth trajectory of the site when looking at throughput, as traditional cumulative growth rates may not be entirely accurate in multi-decade time frames.\par
 The aforementioned assessments culminate into a site model that can be utilized in the selection of various power generation methods.
-
+\newpage
 \subsection{Power Storage} % BRENDAN'S SECTION
 The power storage aspect of our solution is complementary to the sustainable generation of power.  There are multiple options for storing and/or offloading the generated power that an airport must consider.\par 
 %The first option is investing in large scale battery storage so that the generated electricity can be stored before an electric aircraft requires recharging. This option would be favorable for an airport that utilizes battery-swapping methods for aircraft rather than recharging-- a concept that is further detailed in the "Energy Transfer to Aircraft" section. However, this can be a costly consideration that loses efficiency as the energy is transferred between batteries. The battery technology is also still improving, so such an investment would be ineffective in the long-term.\par
@@ -63,31 +64,34 @@ The power storage aspect of our solution is complementary to the sustainable gen
 % Brendan, I re-worded this paragraph below. I really liked your talking points
 The first and most obvious option is to invest in localized large-scale battery storage systems. These systems will store the electricity generated on-site, and will then deliver energy to the aircraft via the selected charging system. For sites that utilize a battery-swapping operational model, the batteries swapped from aircraft can be utilized as the storage elements. For a more traditional on-aircraft charging system, a separate set of batteries is necessary. This requirement can be extremely costly for a site, as the power density of current battery technology is rather low and major strides in performance are being made in this technology sector.\par
 Alternatively, an airport could use its associated electrical grid as somewhat of a battery. The airport would offload it's  electricity into the grid as it is generated, and when aircraft require charging they can pull from this same grid. This option would be less viable in remote areas considering the electrical grid would have lower demand, and the transmission capabilities may already be limited. This is favorable near large cities or other areas with infrastructure demanding large amounts of electricity (i.e. refineries, factories, etc.). For more civilized areas, this storage option proves relatively low-risk, as the airport would be able to sell generated power to the grid if demand for electric aircraft is not as projected.\par
-
-\subsection{Power Distribution} % ALEX'S SECTION
-
+\newpage
 \subsection{Energy Transfer to Aircraft} % SANA'S SECTION
 Once we have decided where we store this power and how we actually distribute this power, it is paramount to consider how we will transfer this energy to their aircraft using our design model. We know that traditionally, this is done by refueling with hydrocarbon fuels through a complicated network of tanks and pumps. Additionally, maintenance of the fuel distribution system is extremely expensive for an airport. With the usage of electric aircraft, airports no longer need to consider the logistics of fuel transfer. Instead, energy transfer is accomplished via battery chargers with a significantly lower operational costs.\par
-Battery charging can be split into two pathways, swapping batteries and recharging batteries. Depending on specific facets of the airport, airports could adopt either model to best benefit their aircraft. First, we would consider swapping batteries. To greatly decrease turnaround time for an air frame, we would feature the capability to swap entire battery modules between planes and charging bays, eliminating the air frame’s downtime to charge batteries. This is a much more efficient solution, and the preferred one, if airports have the capacity to do so. Out-of-airframe charging with battery swaps ensures adequate cooling, charge rates, and the subsequent preservation the battery chemistry, albeit a much more technically complex infrastructure solution.\par
+Battery charging can be split into two pathways, swapping batteries and recharging batteries. Depending on specific facets of the airport, airports could adopt either model to best benefit their aircraft. First, we would consider swapping batteries. To greatly decrease turnaround time for an air frame, we would feature the capability to swap entire battery modules between planes and charging bays, eliminating the air frame's downtime to charge batteries. This is a much more efficient solution, and the preferred one, if airports have the capacity to do so. Out-of-airframe charging with battery swaps ensures adequate cooling, charge rates, and the subsequent preservation the battery chemistry, albeit a much more technically complex infrastructure solution.\par
 The other model is recharging batteries held within the airframe. This is likely the more feasible solution for airports, especially during the beginning stages of electric aircraft implementation. This would require charging stations to be set up at hangars or on designated areas of tarmac at the site. A scalable model would be built to implement these charging stations depending on the size of the aircraft, taking into consideration the anticipated fleets and operational needs. This way, aircraft could have a set road map to follow of how to implement these charging stations, no matter the size, and ensure uniform implementation across the board. With a standardized charging system available at multiple sites, a flight network soon amasses.\par
-We have thought about the different ways energy can be transferred to the aircraft, and through both swapping and recharging batteries, aircraft are able to make sure their planes get the proper charge and care they need to provide energy to their trips. 
-
-% * <Alex Stepko> 19:44:36 04 Aug 2022 UTC-0400:
-% I went through and revised the first 3 lines of your writing. Great job mentioning how we have considered the many kinds of charging systems.
-
-% * <sat5652@psu.edu> 18:06:47 04 Aug 2022 UTC-0400:
-% still need to hone in on this in my section...will do tonight
-
-This part of the solution would meet ACRP goals, specifically goal 3 which states, "Engage students at U.S. colleges and universities in the conceptualization of applications, systems and equipment capable of addressing related challenges in a robust, reliable and comprehensive manner." By thoroughly analyzing the different ways energy can be transferred to these airports, because we know not every airport can have a one size fits all solution, we have thoroughly looked at the challenge in a comprehensive manner, bringing a detailed final prototype to help combat this issue. The projected benefits of this solution would be the feasibility for any airport to implement this issue to ensure clean power generation.
-
+We have thought about the different ways energy can be transferred to the aircraft, and through both swapping and recharging batteries, aircraft are able to make sure their planes get the proper charge and care they need to provide energy to their trips.\par
+This part of the solution would meet ACRP goals, specifically goal 3 which states, "Engage students at U.S. colleges and universities in the conceptualization of applications, systems and equipment capable of addressing related challenges in a robust, reliable and comprehensive manner."\cite{ACRPguide} By thoroughly analyzing the different ways energy can be transferred to these airports, because we know not every airport can have a one size fits all solution, we have thoroughly looked at the challenge in a comprehensive manner, bringing a detailed final prototype to help combat this issue. The projected benefits of this solution would be the feasibility for any airport to implement this issue to ensure clean power generation.\par
+\newpage
 \section{System Implementation}
 The broad applicative nature of our solution requires a site selected for analysis. For simplicity and convenience, the University Park Airport in State College, Pennsylvania was chosen. This airport features a stable cargo and passenger throughput, and also maintains a relatively straightforward operational mode. In 2016, the University Park Airport released a \emph{Sustainable Master Plan} \cite{SCEplan} of the site detailing its operational statistics and planned improvements. The operational statistics of the airport were then utilized to develop a site model for the Risk Matrix and Cost-Benefit Analysis of this report.\par
 
 \subsection{Safety Risk Analysis} % JADEN'S SECTION
+A risk analysis of the system as-implemented at the University Park Airport was then performed. Due to the multi-faceted nature of our solution, a variety of areas were studied for risk. Various risks were entered into a Risk Matrix, seen in Figure \ref{fig:riskMatrix}, showing both the un-mitigated and mitigated risk outcomes.\par
+\begin{figure}[ht]
+  \begin{adjustbox}{addcode={\begin{minipage}{\width}}{\caption{
+      Risk Assessment Matrix of the University Park Airport
+      }
+      \label{fig:riskMatrix}
+      \end{minipage}},rotate=-90,center}
+      \includegraphics[scale=.81]{RiskMatrixV1.pdf}%
+  \end{adjustbox}
+\end{figure}
+\FloatBarrier
+The purpose of our Risk Matrix is to assess weak point in our proposed solution and determine the way in which those weak points can be best resolved to mitigate each risk. In order to create our Risk Matrix, we considered a variety of different factors from each category of our proposed solution. These categories are power generation, power distributions, charging, and marketing. After evaluating a variety of potential risks in each area, we were able to mitigate all of our risks to the low or medium level, despite many risks originally being in the high range. We determined the risk level by evaluating the severity and likelihood of each potential risk. After evaluating the risk levels, we brainstormed ways in which those risks could be mitigated, and then evaluated each risk level again. This process allow use to enact simple solutions that would otherwise be extremely detrimental to our proposed solution's success. It is because of this, that the Risk Matrix serves as a key element of our design process. 
 
 %Jaden here's what was in the ACRP project guidelines:
 %   Safety Risk Assessment: The FAA promotes a culture of safety throughout all its operations. Examine     existing FAA safety management system guidance as it relates to your proposed design solution. C      Consider inherent risks and describe how these risks should be addressed to ensure safe operations.   Be sure to reference Introduction to Safety Management Systems for Airport Operators (FAA Advisory    Circular 150/5200-37) and FAA Safety Management System Manual available under the Resources           section of the Competition website. See video with additional guidance on this section at the         Competition website
-
+\newpage
 \subsection{Cost Benefit Analysis} % ALEX'S SECTION
 The Cost-Benefit Analysis (CBA) of the proposed site implementation plan was developed using a thoroughly analyzed site model. This model accounts for a variety of factors; however, for simplicity sake assumptions have been made. The model makes assumptions about both the economic and technological aspects of the project, and were made in order to simplify the CBA. The assumptions are listed below, for maximum transparency into the solution's logic.
 \begin{enumerate}
@@ -135,7 +139,8 @@ With the result of both of these analyses, a power generation system can be sele
     \centering
 \end{figure}
 \FloatBarrier
-There is approximately $500000ft^{2}$ of available space for solar panels. Low glare solar panels were selected, and approximate distribution cable lengths were determined in AutoCAD. From this amount of panel required, standard civil and electrical labor amounts were approximated.\par
-Airport employees that interface with this system will require substantial training.
-
+There is approximately $500000ft^{2}$ of available space for solar panels. Low glare solar panels were selected, and approximate distribution cable lengths were determined in AutoCAD. From this amount of panel required, standard civil and electrical labor amounts were approximated.Included in the CBA are a variety of other engineering, training, and system maintenance costs. These costs were determined using industry-standard rates, and also looking into average costs in the State College, Pennsylvania area. \par
+A similar strategy was undertaken for the benefits of the system. Our solution comprises mainly of intangible benefits, and therefore many of the amounts listed are likely and underestimate of their true worth. The inherent value for the site in our implementation is the greatly increased marketability of the airport as a site for electric aircraft to operate with. As a result, cargo throughput through the airport will increase, resulting in more regional economic growth and expansion. Additionally, the advanced technologies used in this solution require a more highly educated workforce. This workforce is responsible for the operation and maintenance of the system.\par
+\subsection*{Closing remarks}
+Thorough research, analysis, consideration, and development of the implementation plan at the University Park Airport demonstrates the viability of this solution. The chosen site, although small in size, maintains much of an operational structure similar to larger sites. An implementation at another site may look entirely different, as explained in section \ref{sysDesign}. Additionally, advancements in technology or market focus may change the procedure by which a system is designed. However, the core analysis components necessary to design the solution remain, and this is the core of what our solution attempts to solve.\par
 \end{document}
