--- a/mendeleyImport.bib
+++ b/mendeleyImport.bib
@@ -264,7 +264,7 @@ However, factors such as the power limitations of batteries, and associated safe
    url = {https://www.shell.com/business-customers/aviation/aviation-fuel/civil-jet-fuel-grades.html},
    year = {2022},
 }
-@web_page{Brinkmann2022,
+@web_page{ref9,
    author = {Paul Brinkmann},
    journal = {United Press International (UPI)},
    month = {3},
@@ -345,4 +345,19 @@ However, factors such as the power limitations of batteries, and associated safe
    volume = {596},
    url = {https://www.nature.com/articles/d41586-021-02222-1},
    year = {2021},
+}
+@report{ACRPguide,
+   institution = {Airport Cooperative Research Program},
+   pages = {9-11},
+   title = {University Design Competition for Addressing Airport Needs},
+   url = {https://vsgc.odu.edu/acrpdesigncompetition/wp-content/uploads/sites/3/2021/08/2021-2022-ACRPDesignGuidelines-8-12.pdf},
+   year = {2022},
+}
+@report{SCEplan,
+   abstract = {In an effort to establish a solid plan for the future development of the University Park Airport (Airport), The Pennsylvania State University (Penn State), owners and operators of the Airport, in conjunction with the Federal Aviation Administration (FAA), elected to prepare a sustainable master plan. This sustainable master planning effort was part of an FAA pilot program that was designed to help airports identify ways to plan for future development while reducing energy consumption, environmental impacts, and carbon footprints. In addition, this sustainable master plan will also address areas of interest that will have a bearing on the management and development of the Airport in the future. Through this effort, the Airport will become a more environmentally friendly neighbor while having an established plan to direct the future development so that existing and anticipated needs are met over the next 20 years.},
+   city = {July},
+   institution = {Mead \& Hunt},
+   title = {University Park Airport Sustainable Master Plan},
+   url = {https://www.universityparkairport.com/arrivals-and-departures/about-our-airlines/},
+   year = {2016},
 }
